@@ -4,9 +4,9 @@ require "rails_erd/railtie" if defined? Rails
 # Welcome to the API documentation of Rails ERD. If you wish to extend or
 # customise the output that is generated by Rails ERD, you have come to the
 # right place.
-# 
+#
 # == Creating custom output
-# 
+#
 # If you want to create your own kind of diagrams, or some other output, a
 # good starting point is the RailsERD::Diagram class. It can serve as the base
 # of your output generation code.
@@ -33,7 +33,7 @@ module RailsERD
     # RailsERD::Diagram will use these options unless overridden.
     attr_accessor :options
   end
-  
+
   module Inspectable # @private :nodoc:
     def inspection_attributes(*attributes)
       attribute_inspection = attributes.collect { |attribute|
@@ -54,6 +54,7 @@ module RailsERD
     :filetype, :pdf,
     :indirect, true,
     :inheritance, false,
+    :markup, true,
     :notation, :simple,
     :orientation, :horizontal,
     :polymorphism, false,
